--- a/SDK/i2s_test/i2s_test.ioc
+++ b/SDK/i2s_test/i2s_test.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 Dma.Request0=SAI1_A
 Dma.RequestsNb=1
 Dma.SAI1_A.0.Direction=DMA_PERIPH_TO_MEMORY
@@ -14,7 +17,7 @@ Dma.SAI1_A.0.PeriphBurst=DMA_PBURST_SINGLE
 Dma.SAI1_A.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SAI1_A.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SAI1_A.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SAI1_A.0.Priority=DMA_PRIORITY_LOW
+Dma.SAI1_A.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.SAI1_A.0.RequestNumber=1
 Dma.SAI1_A.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.SAI1_A.0.SignalID=NONE
@@ -36,18 +39,21 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SAI1
 Mcu.IP6=SYS
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP7=USART2
+Mcu.IP8=USB_DEVICE
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PA12
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin10=PA3
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin2=PE5
 Mcu.Pin3=PE6
 Mcu.Pin4=PC13
@@ -55,31 +61,35 @@ Mcu.Pin5=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PH0-OSC_IN (PH0)
 Mcu.Pin8=PH1-OSC_OUT (PH1)
-Mcu.Pin9=PA11
-Mcu.PinsNb=15
+Mcu.Pin9=PA2
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
-MxCube.Version=6.5.0
-MxDb.Version=DB.6.0.50
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+MxCube.Version=6.7.0
+MxDb.Version=DB.6.0.70
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SAI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -121,10 +131,10 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H750VBTx
-ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.10.0
+ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x4000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -135,16 +145,16 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=i2s_test.ioc
 ProjectManager.ProjectName=i2s_test
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.StackSize=0x2000
+ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_SAI1_Init-SAI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.UnderRoot=false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
 RCC.APB1Freq_Value=32000000
-RCC.APB2Freq_Value=64000000
+RCC.APB2Freq_Value=32000000
 RCC.APB3Freq_Value=64000000
 RCC.APB4Freq_Value=64000000
 RCC.AXIClockFreq_Value=64000000
@@ -154,21 +164,20 @@ RCC.CortexFreq_Value=64000000
 RCC.CpuClockFreq_Value=64000000
 RCC.D1CPREFreq_Value=64000000
 RCC.D2PPRE1=RCC_APB1_DIV2
-RCC.DFSDMACLkFreq_Value=12288000
-RCC.DFSDMFreq_Value=64000000
-RCC.DIVM1=5
-RCC.DIVN1=24
-RCC.DIVP1Freq_Value=153600000
+RCC.D2PPRE2=RCC_APB2_DIV2
+RCC.DFSDMACLkFreq_Value=75000000
+RCC.DFSDMFreq_Value=32000000
+RCC.DIVN1=344
+RCC.DIVP1Freq_Value=75000000
 RCC.DIVP2Freq_Value=129000000
 RCC.DIVP3Freq_Value=129000000
-RCC.DIVQ1=25
-RCC.DIVQ1Freq_Value=12288000
+RCC.DIVQ1Freq_Value=75000000
 RCC.DIVQ2Freq_Value=129000000
 RCC.DIVQ3Freq_Value=129000000
-RCC.DIVR1Freq_Value=153600000
+RCC.DIVR1Freq_Value=75000000
 RCC.DIVR2Freq_Value=129000000
 RCC.DIVR3Freq_Value=129000000
-RCC.FDCANFreq_Value=12288000
+RCC.FDCANFreq_Value=75000000
 RCC.FMCFreq_Value=64000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=64000000
@@ -176,7 +185,7 @@ RCC.HCLKFreq_Value=64000000
 RCC.HRTIMFreq_Value=64000000
 RCC.I2C123Freq_Value=32000000
 RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,D2PPRE2,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=64000000
 RCC.LPTIM345Freq_Value=64000000
@@ -184,46 +193,49 @@ RCC.LPUART1Freq_Value=64000000
 RCC.LTDCFreq_Value=129000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=64000000
-RCC.PLLFRACN=0
+RCC.PLLFRACN=4254
 RCC.QSPIFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=12288000
-RCC.SAI23Freq_Value=12288000
-RCC.SAI4AFreq_Value=12288000
-RCC.SAI4BFreq_Value=12288000
-RCC.SDMMCFreq_Value=12288000
-RCC.SPDIFRXFreq_Value=12288000
-RCC.SPI123Freq_Value=12288000
-RCC.SPI45Freq_Value=64000000
+RCC.SAI1Freq_Value=75000000
+RCC.SAI23Freq_Value=75000000
+RCC.SAI4AFreq_Value=75000000
+RCC.SAI4BFreq_Value=75000000
+RCC.SDMMCFreq_Value=75000000
+RCC.SPDIFRXFreq_Value=75000000
+RCC.SPI123Freq_Value=75000000
+RCC.SPI45Freq_Value=32000000
 RCC.SPI6Freq_Value=64000000
 RCC.SWPMI1Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.Tim1OutputFreq_Value=64000000
 RCC.Tim2OutputFreq_Value=64000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=64000000
+RCC.USART16Freq_Value=32000000
 RCC.USART234578Freq_Value=32000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.USBFreq_Value=48000000
-RCC.VCO1OutputFreq_Value=307200000
+RCC.VCO1OutputFreq_Value=150000000
 RCC.VCO2OutputFreq_Value=258000000
 RCC.VCO3OutputFreq_Value=258000000
-RCC.VCOInput1Freq_Value=12800000
+RCC.VCOInput1Freq_Value=16000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
 SAI1.AudioFrequency-SAI_A_Master=SAI_AUDIO_FREQUENCY_48K
 SAI1.AudioMode-SAI_A_Master=SAI_MODEMASTER_RX
 SAI1.DataSize-SAI_A_Master=SAI_DATASIZE_16
-SAI1.ErrorAudioFreq-SAI_A_Master=0.0 %
+SAI1.ErrorAudioFreq-SAI_A_Master=1.72 %
 SAI1.FrameLength-SAI_A_Master=128
 SAI1.IPParameters=Instance-SAI_A_Master,VirtualMode-SAI_A_Master,MClockEnable,RealAudioFreq-SAI_A_Master,ErrorAudioFreq-SAI_A_Master,AudioMode-SAI_A_Master,FrameLength-SAI_A_Master,DataSize-SAI_A_Master,SlotSize-SAI_A_Master,SlotNumber-SAI_A_Master,AudioFrequency-SAI_A_Master
 SAI1.Instance-SAI_A_Master=SAI$Index_Block_A
 SAI1.MClockEnable=SAI_MASTERCLOCK_DISABLE
-SAI1.RealAudioFreq-SAI_A_Master=48.0 KHz
+SAI1.RealAudioFreq-SAI_A_Master=48.828 KHz
 SAI1.SlotNumber-SAI_A_Master=8
 SAI1.SlotSize-SAI_A_Master=SAI_SLOTSIZE_16B
 SAI1.VirtualMode-SAI_A_Master=VM_MASTER
+USART2.IPParameters=VirtualMode-Asynchronous,Mode
+USART2.Mode=MODE_TX
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=AUDIO
 USB_DEVICE.IPParameters=VirtualMode-AUDIO_FS,VirtualModeFS,CLASS_NAME_FS,USBD_MAX_NUM_INTERFACES-AUDIO_FS,USBD_MAX_STR_DESC_SIZ-AUDIO_FS,USBD_AUDIO_FREQ-AUDIO_FS
 USB_DEVICE.USBD_AUDIO_FREQ-AUDIO_FS=48000
@@ -240,4 +252,3 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Mode=AUDIO_FS
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Signal=USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 board=custom
-isbadioc=false
