--- a/SDK/i2s_test/i2s_test.ioc
+++ b/SDK/i2s_test/i2s_test.ioc
@@ -34,15 +34,16 @@ Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SAI1
 Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IP8=USB_DEVICE
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP7=TIM1
+Mcu.IP8=USART2
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=11
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -53,7 +54,8 @@ Mcu.Pin12=PA12
 Mcu.Pin13=PB6
 Mcu.Pin14=PB7
 Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin2=PE5
 Mcu.Pin3=PE6
 Mcu.Pin4=PC13
@@ -62,7 +64,7 @@ Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PH0-OSC_IN (PH0)
 Mcu.Pin8=PH1-OSC_OUT (PH1)
 Mcu.Pin9=PA2
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -81,6 +83,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SAI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -149,7 +152,7 @@ ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
@@ -233,6 +236,10 @@ SAI1.RealAudioFreq-SAI_A_Master=48.828 KHz
 SAI1.SlotNumber-SAI_A_Master=8
 SAI1.SlotSize-SAI_A_Master=SAI_SLOTSIZE_16B
 SAI1.VirtualMode-SAI_A_Master=VM_MASTER
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM1.Period=8000-1
+TIM1.Prescaler=48-1
 USART2.IPParameters=VirtualMode-Asynchronous,Mode
 USART2.Mode=MODE_TX
 USART2.VirtualMode-Asynchronous=VM_ASYNC
@@ -249,6 +256,8 @@ USB_OTG_FS.VirtualMode=Device_Only
 USB_OTG_FS.dma_enable=DISABLE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Mode=AUDIO_FS
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Signal=USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 board=custom
